--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "mongoose": "^8.18.1",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
