--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "stream-chat": "^9.19.1",
+    "stream-chat-react": "^13.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
